On local branch master Changes to be committed: 	modified:   css/pagebuilder.css 	modified:   details.html 	modified:   index.html 	modified:   js/detailpagehelper.js Alignment Issues fixed Mobile version optimised

--- a/css/pagebuilder.css
+++ b/css/pagebuilder.css
@@ -64,6 +64,10 @@
 [class*="col-"] {
   width: 100%;
 }
+.underline
+{
+  border-bottom : 1px solid black;
+}
 /* custom css input text box */
 input[type=text],select{
   border : 3px solid black;
